# trial-api

./: Cargo.toml  env
.github/workflows/: release.yml  rust.yml
src/: main.rs
