[package]
name = "trial-api"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"]  }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
lettre = { version = "0.11", features = ["tokio1", "builder", "smtp-transport", "tokio1-native-tls"] }


